# JaxPIP

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: README.md
examples/CH4/: CH4.xyz  demo.ipynb  prepare_basis.sh
examples/CH4/basis/: MOL_4_1_4.FOC  MOL_4_1_4.MAP  MOL_4_1_4.MONO  MOL_4_1_4.POLY
examples/MOL_5_2_1_7/: demo_fp32.ipynb  demo_fp64.ipynb
examples/VIB5-SiH4-CCSD_T/: README.md  demo.ipynb  prepare_basis.sh
examples/VIB5-SiH4-CCSD_T/basis/: MOL_1_4_4.FOC  MOL_1_4_4.MAP  MOL_1_4_4.MONO  MOL_1_4_4.POLY
jaxpip/: __init__.py  basis.py  jaxpip.py
jaxpip/cli/: entries.py
jaxpip/descriptor/: __init__.py  _abc.py  _frag_pip.py  _libpip.py  _md_pip.py  _pip.py  abc.py  kernel.py  pip.py  polynomial_descriptor.py
jaxpip/model/: __init__.py  _linear.py  _nn.py  activation.py  linear.py  network.py
jaxpip/model/_nn/: _act.py  _nn.py
jaxpip/types/: __init__.py  descriptor.py
jaxpip/utils/: BAS2json.py  __init__.py  converter.py
